# RunMyModel

./: .eslintrc.json  .gitignore  ARCHITECTURE_0.3.0.md  ARCHITECTURE_PURE_CPP.md  BRANDING.md  BUILD.md  BUILD_LINUX.md  BUILD_SUMMARY.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DEBUGGING.md  DEVELOPMENT.md  FEATURES.md  INSTALL.md  LICENSE  PACKAGING.md  PROJECT_SUMMARY.md  RAG_INTEGRATION_STATUS.md  README.md  RELEASE_NOTES.md  RunMyModelDesktop-v0.5.0-PRE-RELEASE-x64.msi  RunMyModelDesktop.pro  amd.txt  build-windows-complete.sh  build-windows.sh  build.sh  build_all.sh  build_appimage.sh  build_linux.sh  build_msi.sh  build_native.sh  index.html  intel.txt  llms.txt  models.txt  nvidia.txt  package-lock.json  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci-cd.yml  security.yml
app/: build.sh  run.sh  run_arch.sh
app/src-cpp/include/: api_manager.h  backend.h  backend_client.h  downloadpanel.h  finetune_engine.h  finetune_panel.h  gpu_detector.h  llama_engine.h  mainwindow.h  mainwindow_simple.h  model_manager.h  model_trainer.h  modelcard.h  plugin_system.h  rag_system.h  session_manager.h  web_server.h
app/src-cpp/src/: api_manager.cpp  backend.cpp  backend_client.cpp  finetune_engine.cpp  finetune_panel.cpp  gpu_detector.cpp  llama_engine.cpp  main.cpp.old  main_simple.cpp  mainwindow.cpp  mainwindow.cpp.backup  mainwindow_new.cpp  mainwindow_simple.cpp  model_manager.cpp  model_trainer.cpp  plugin_system.cpp.bak  prompt_architect_widget.cpp  rag_system.cpp.bak  session_manager.cpp.bak  web_server.cpp
backend-python/: __init__.py  main.py  requirements.txt
backend-python/api/: prompt_routes.py  routes.py
backend-python/models/: loader.py
backend-python/prompts/: architect.py  templates.py
backend-python/utils/: config.py
config/: default_config.json
docs/: README.md
docs/developer/: README.md
docs/features/: README.md
docs/quick-start/: README.md
docs/support/: README.md
docs/user/: installation.md
final-packages/: README.md
src/: App.tsx  index.css
src-cpp/include/: backend.h  backend_client.h  huggingface_client.h  llama_engine.h  mainwindow.h  mainwindow.h.backup  mainwindow.h.old  model_manager.h  prompt_architect_widget.h  system_info.h  web_server.h
src-cpp/src/: backend.cpp  backend_client.cpp  downloadpanel.cpp  huggingface_client.cpp  llama_engine.cpp  main.cpp  mainwindow.cpp  mainwindow.cpp.old  model_manager.cpp  modelcard.cpp  system_info.cpp  web_server.cpp
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AboutModal.tsx  ChatWindow.tsx  CustomModelPage.tsx  ModelBrowser.tsx  ModelManager.tsx  ModelSelector.tsx  ModelsPage.tsx  ModernChatWindow.tsx  ModernSidebar.tsx  Sidebar.tsx  SplashScreen.tsx  SystemPromptSelector.tsx  WelcomePage.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
src/services/: backendService.ts  huggingFaceService.ts
src/store/: appStore.ts  chatStore.ts  modelStore.ts
src/types/: system.ts
